订单列表页倒序
wangd: 增加代理商订单倒序展示。

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,12 +14,16 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "106.15.89.182",
+    "host": "47.100.97.44",
+    "remote_path": "/app/bmb",
+
+    //"host": "106.15.89.182",
+    //"remote_path": "/test/bmb",
+
     "user": "wangdan",
     //"password": "password",
     //"port": "22",
     
-    "remote_path": "/test/bmb",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
