手机端上传开户优化
修改手机端样式问题

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,11 +14,11 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "47.100.97.44",
-    "remote_path": "/app/bmb",
+    // "host": "47.100.97.44",
+    // "remote_path": "/app/bmb",
 
-    //"host": "106.15.89.182",
-    //"remote_path": "/test/bmb",
+    "host": "106.15.89.182",
+    "remote_path": "/test/bmb",
 
     "user": "wangdan",
     //"password": "password",
